bugfix(tooltip): fixed beak z-index

--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -39,6 +39,7 @@
     position: absolute;
     transform: translateX(-50%);
     transition: .3s;
+    z-index: 1;
   }
 }
 
